--- a/client/src/components/header/style.scss
+++ b/client/src/components/header/style.scss
@@ -1,17 +1,19 @@
 .menu {
   width: 100%;
+  // border:  1px solid #000000;
   height: auto;
   display: flex;
   justify-content: space-between;
   background-color: #ffffff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
   border-radius: 1rem;
   margin-bottom: 2rem;
   font-size: inherit;
 
   .left-menu {
-    width: 70%;
+    width: 20%;
     height: auto;
+    // border:  1px solid #000000;
     display: flex;
     justify-content: left;
     margin: 1rem;
@@ -40,9 +42,17 @@
         margin-left: 0.6rem;
       }
     }
-    .function {
+  }
+  .mid{
+    width: 70%;
+    height: auto;
+    // border:  1px solid #000000;
+    display: flex;
+    justify-content: left;
+    margin: 1rem;
+        .funtion {
       width: 60%;
-      height: 4rem;
+      height: min-content;
       display: flex;
       margin-top: 0.7rem;
       a {
@@ -54,6 +64,7 @@
         padding: 1rem;
         border-radius: 2rem;
         margin: 0px 1.2rem;
+        text-decoration: none;
         &:hover {
           color: #ffffff;
           background-color: #016bf7;
@@ -63,7 +74,7 @@
     }
   }
   .right-menu {
-    width: 6.4rem;
+    // width: 10%;
     height: auto;
     float: right;
     padding: 1.8rem;
@@ -102,6 +113,7 @@
       a:hover {
         color: black;
         background-color: blanchedalmond;
+        cursor: pointer;
       }
     }
   }
