Chinh Push Inspect Doctor

--- a/client/src/features/doctor/appointment_management/components/View_calendar_List/styleCancel.scss
+++ b/client/src/features/doctor/appointment_management/components/View_calendar_List/styleCancel.scss
@@ -45,8 +45,10 @@
                 background-color: #e5fcff;
                 border: 1px solid black;
                 padding: 3px;
+                text-align: center;
+                padding: 8px;
+                line-height: 1.2;
             }
-
             .date {
                 background-color: #f2dfdf;
                 border: 1px solid black;
@@ -72,5 +74,3 @@
         }
     }
 }
-
-
