--- a/client/src/features/doctor/DoctorPayment/doctorPayment.scss
+++ b/client/src/features/doctor/DoctorPayment/doctorPayment.scss
@@ -3,18 +3,37 @@
   height: auto;
 //   border: 1px solid #ac2525;
   margin-left: 10vw;
-  text-align: center;
   background-color: rgb(239, 235, 230);
   box-shadow: 4px 4px 20px rgba(69, 68, 68, 0.1);
   border-radius: 20px;
-  h2{
+  .balance{
+    float: left;
+    width: 20%;
+    margin-left: 2rem;
+    margin-top: 2rem;
+    font-size: 1.2rem;
+    text-transform: capitalize;
+    font-weight: bold;
+    color: black;
+    P{
+      width: max-content;
+      margin-left: 1REM;
+    }
+  }
+ .main{
+  width: 70%;
+  height: auto;
+  margin-left: 15%;
+  text-align: center;
+  // border: 1px solid #ac2525;
+   h2{
     padding-top: 2rem;
     font-size: 2rem;
     color: black;
     margin-top: 20px;
   }
   p{
-    width: 30%;
+    width: 40%;
     height: auto;
     display: flex;
     justify-content: space-between;
@@ -22,10 +41,11 @@
     font-size: 1.2rem;
     color: black;
     margin-top: 20px;
-    margin-left: 35%;
+    margin-left: 30%;
     span{
         font-weight: bold;
         float: left;
     }
   }
+ }
 }
