--- a/client/src/features/admin/inadmin/quanlyquyen.scss
+++ b/client/src/features/admin/inadmin/quanlyquyen.scss
@@ -186,6 +186,10 @@ th, td {
       p {
         margin: 4px 0;
         font-size: 14px;
+        img{
+          width: 30%;
+          height: 30%;
+        }
       }
     }
   }
