--- a/client/src/components/header/style.scss
+++ b/client/src/components/header/style.scss
@@ -65,6 +65,7 @@
         border-radius: 2rem;
         margin: 0px 1.2rem;
         text-decoration: none;
+        text-transform: capitalize;
         &:hover {
           color: #ffffff;
           background-color: #016bf7;
