--- a/client/src/components/header/style.scss
+++ b/client/src/components/header/style.scss
@@ -102,6 +102,7 @@
       right: 0;
       visibility: hidden;
       z-index: 10;
+      border-radius: 10%;
       a {
         font-size: 1.2rem;
         color: white;
@@ -110,6 +111,7 @@
         display: block;
         padding: 0.8rem;
         border-radius: 0.8rem;
+        text-decoration: none;
       }
       a:hover {
         color: black;
